Fixed all so far

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,20 @@
     <!-- Custom - CSS Include -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/68b87ab4109d7be2aa213dca/1j489ul40';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+
   </head>
 
 
@@ -178,7 +192,7 @@
           <div class="container">
             <div class="clients_logo_carousel swiper">
               <!-- <div class="badge text-uppercase text-primary bg-primary-subtle">Trusted Companies</div> -->
-              <div class="swiper-wrapper">
+              <!-- <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="image_block border">
                     <img src="assets/images/clients/client_logo_2.webp" alt="Client Logo">
@@ -249,7 +263,7 @@
                     <img src="assets/images/clients/client_logo_8.webp" alt="Client Logo">
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="decoration_item icon_star_1">
@@ -337,11 +351,11 @@
                       </a>
                     </li>
                     <li>
-                      <a href="mailto:admin@perryleo.com">
+                      <a href="mailto:support@perryleo.com">
                         <span class="iconlist_icon">
                           <img src="assets/images/icons/icon_email_3.svg" alt="Icon Email">
                         </span>
-                        <span class="iconlist_text">admin@perryleo.com</span>
+                        <span class="iconlist_text">support@perryleo.com</span>
                       </a>
                     </li>
                   </ul>
@@ -384,7 +398,7 @@
         <!-- Google Map - Start
         ================================================== -->
         <div class="gmap_canvas bg-light">
-          <iframe src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253790.42441274796!2d5.447486990212115!3d6.332404285844085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1040d36279cfacf1%3A0x84aa10c05758dfa0!2sBenin%20City%2C%20Edo!5e0!3m2!1sen!2sng!4v1756920299528!5m2!1sen!2sng"></iframe>
         </div>
         <!-- Google Map - End
         ================================================== -->
@@ -408,7 +422,7 @@
                   <div class="iconbox_content">
                     <h3 class="iconbox_title">Write to us</h3>
                     <p class="mb-0">
-                      <a href="mailto:finto@synos.com">admin@perryleo.com</a>
+                      <a href="mailto:finto@synos.com">support@perryleo.com</a>
                     </p>
                   </div>
                 </div>
