--- a/error.html
+++ b/error.html
@@ -1,98 +1,172 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
   <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="thumbnail" content="assets/images/perryleo-logo.png">
-    <meta name="description" content="PerryLeo – Finance & Consulting Site.">
-    <meta name="keywords" content="Seamless Global Money Transfers and online payment">
-    <meta name="author" content="djeffsource">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="thumbnail" content="assets/images/perryleo-logo.png" />
+    <meta name="description" content="PerryLeo – Finance & Consulting Site." />
+    <meta
+      name="keywords"
+      content="Seamless Global Money Transfers and online payment"
+    />
+    <meta name="author" content="djeffsource" />
 
     <title>PerryLeo – Breaking borders, one payment at a time.</title>
-  <link rel="shortcut icon" href="assets/images/site_logo/favourite_icon.webp">
+    <link
+      rel="shortcut icon"
+      href="assets/images/site_logo/favourite_icon.webp"
+    />
 
     <!-- Fraimwork - CSS Include -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/bootstrap.min.css"
+    />
 
     <!-- Icon - CSS Include -->
-    <link rel="stylesheet" type="text/css" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/fontawesome.css" />
 
     <!-- Animation - CSS Include -->
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/animate.min.css" />
 
     <!-- Carousel - CSS Include -->
-    <link rel="stylesheet" type="text/css" href="assets/css/swiper-bundle.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/swiper-bundle.min.css"
+    />
 
     <!-- Video & Image Popup - CSS Include -->
-    <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/magnific-popup.min.css"
+    />
 
     <!-- Counter - CSS Include -->
-    <link rel="stylesheet" type="text/css" href="assets/css/odometer.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/odometer.min.css" />
 
     <!-- Custom - CSS Include -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+      (function () {
+        var s1 = document.createElement("script"),
+          s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = "https://embed.tawk.to/68b87ab4109d7be2aa213dca/1j489ul40";
+        s1.charset = "UTF-8";
+        s1.setAttribute("crossorigin", "*");
+        s0.parentNode.insertBefore(s1, s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
   </head>
 
-
   <body>
-
     <!-- Body Wrap - Start -->
     <div class="page_wrapper">
-
       <!-- Main Body - Start
       ================================================== -->
       <main class="page_content">
-
         <!-- Error Section - Start
         ================================================== -->
         <section class="error_section text-center section_decoration">
           <div class="container">
             <div class="error_image">
-              <img src="assets/images/404_error_image.webp" alt="404 Error Image">
+              <img
+                src="assets/images/404_error_image.webp"
+                alt="404 Error Image"
+              />
             </div>
             <h1>Hi 👋 Sorry We Can’t Find That Page!</h1>
             <p>
-              The page you are looking for was moved, removed, renamed or never existed.
+              The page you are looking for was moved, removed, renamed or never
+              existed.
             </p>
             <div class="form-group">
-              <input class="form-control" type="search" name="search" placeholder="Search your keyword">
+              <input
+                class="form-control"
+                type="search"
+                name="search"
+                placeholder="Search your keyword"
+              />
               <button type="submit" class="icon_block">
-                <img src="assets/images/icons/icon_search_2.svg" alt="Icon Search">
+                <img
+                  src="assets/images/icons/icon_search_2.svg"
+                  alt="Icon Search"
+                />
               </button>
             </div>
             <div class="btns_group pb-0">
               <a class="btn bg-dark" href="index.html">
                 <span class="btn_label">Take Me Home</span>
-                <span class="btn_icon"><svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M19.7071 8.70711C20.0976 8.31658 20.0976 7.68342 19.7071 7.29289L13.3431 0.928932C12.9526 0.538408 12.3195 0.538408 11.9289 0.928932C11.5384 1.31946 11.5384 1.95262 11.9289 2.34315L17.5858 8L11.9289 13.6569C11.5384 14.0474 11.5384 14.6805 11.9289 15.0711C12.3195 15.4616 12.9526 15.4616 13.3431 15.0711L19.7071 8.70711ZM0 9H19V7H0V9Z" fill="white" />
-                </svg></span>
+                <span class="btn_icon"
+                  ><svg
+                    width="20"
+                    height="16"
+                    viewBox="0 0 20 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M19.7071 8.70711C20.0976 8.31658 20.0976 7.68342 19.7071 7.29289L13.3431 0.928932C12.9526 0.538408 12.3195 0.538408 11.9289 0.928932C11.5384 1.31946 11.5384 1.95262 11.9289 2.34315L17.5858 8L11.9289 13.6569C11.5384 14.0474 11.5384 14.6805 11.9289 15.0711C12.3195 15.4616 12.9526 15.4616 13.3431 15.0711L19.7071 8.70711ZM0 9H19V7H0V9Z"
+                      fill="white"
+                    /></svg
+                ></span>
               </a>
             </div>
           </div>
-          <div class="decoration_item shape_dollar_1 wow fadeInUp" data-wow-delay=".1s">
-            <img src="assets/images/shapes/shape_dollar_1.webp" alt="Shape Dollar">
+          <div
+            class="decoration_item shape_dollar_1 wow fadeInUp"
+            data-wow-delay=".1s"
+          >
+            <img
+              src="assets/images/shapes/shape_dollar_1.webp"
+              alt="Shape Dollar"
+            />
           </div>
-          <div class="decoration_item shape_dollar_2 wow fadeInUp" data-wow-delay=".1s">
-            <img src="assets/images/shapes/shape_dollar_2.webp" alt="Shape Dollar">
+          <div
+            class="decoration_item shape_dollar_2 wow fadeInUp"
+            data-wow-delay=".1s"
+          >
+            <img
+              src="assets/images/shapes/shape_dollar_2.webp"
+              alt="Shape Dollar"
+            />
           </div>
-          <div class="decoration_item shape_dollar_3 wow fadeInUp" data-wow-delay=".2s">
-            <img src="assets/images/shapes/shape_dollar_3.webp" alt="Shape Dollar">
+          <div
+            class="decoration_item shape_dollar_3 wow fadeInUp"
+            data-wow-delay=".2s"
+          >
+            <img
+              src="assets/images/shapes/shape_dollar_3.webp"
+              alt="Shape Dollar"
+            />
           </div>
-          <div class="decoration_item shape_dollar_4 wow fadeInUp" data-wow-delay=".2s">
-            <img src="assets/images/shapes/shape_dollar_4.webp" alt="Shape Dollar">
+          <div
+            class="decoration_item shape_dollar_4 wow fadeInUp"
+            data-wow-delay=".2s"
+          >
+            <img
+              src="assets/images/shapes/shape_dollar_4.webp"
+              alt="Shape Dollar"
+            />
           </div>
         </section>
         <!-- Error Section - End
         ================================================== -->
-
       </main>
       <!-- Main Body - End
       ================================================== -->
-
     </div>
     <!-- Body Wrap - End -->
 
@@ -122,7 +196,5 @@
 
     <!-- Custom - Jquery Include -->
     <script src="assets/js/main.js"></script>
-
   </body>
-
 </html>
