--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
   <!-- currencies converter form actions -->
   <script src="assets/js/currency-converter.js"></script>
 
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/68b87ab4109d7be2aa213dca/1j489ul40';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
+
 </head>
 
 
@@ -238,8 +252,8 @@
             <!-- <img src="assets/images/hero/card.png" alt=""> -->
           </div>
         </div>
-        <div class="container">
-          <div class="clients_logo_carousel swiper">
+        <div class="container" style="margin-bottom: 100px">
+          <!-- <div class="clients_logo_carousel swiper">
             <div class="badge text-uppercase text-primary bg-primary-subtle">Trusted Companies</div>
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -313,7 +327,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="decoration_item icon_star_1">
           <img src="assets/images/icons/icon_star_4.svg" alt="Icon Star">
@@ -367,7 +381,7 @@
                     </p>
                   </div>
                   <div class="image_block">
-                    <img src="assets/images/mobile_app_image.webp" alt="Feature Image">
+                    <img src="assets/images/mobile_app_image.png" alt="Feature Image">
                   </div>
                 </div>
               </div>
@@ -540,7 +554,7 @@
 
       <!-- Video Section - Start
         ================================================== -->
-      <section class="video_section section_space pb-0 bg-light">
+      <!-- <section class="video_section section_space pb-0 bg-light">
         <div class="container">
           <div class="heading_block style_2 text-center">
             <div class="badge text-uppercase text-dark bg-dark-subtle">Who we are</div>
@@ -558,7 +572,7 @@
             </a>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- Video Section - End
         ================================================== -->
 
@@ -603,10 +617,10 @@
                   <img src="assets/images/icons/icon_chart_2.svg" alt="Icon Chart 2">
                 </div>
                 <h3 class="imagebox_title">
-                  Competitive Exchange Rates
+                  Competitive Transfer Fees
                 </h3>
                 <h4 class="funfact_title mb-0">
-                  Save more with the best exchange rates and transparent fees—no hidden costs.
+                  Save more with the best transfer fees and transparent fees — no hidden costs.
                 </h4>
               </div>
             </div>
@@ -614,7 +628,7 @@
               <div class="money_transactions_card bg-dark"
                 style="background-image: url('assets/images/shapes/shape_line.svg');">
                 <div class="image_block">
-                  <img src="assets/images/mobile_app_image.webp" alt="Transactions Card">
+                  <img src="assets/images/mobile_app_image.png" alt="Transactions Card">
                 </div>
                 <a class="btn bg-primary text-dark" href="service_fees.html">
                   <span class="btn_label">Learn More</span>
@@ -1136,7 +1150,7 @@
 
       <!-- Integrated Section - Start
         ================================================== -->
-      <section class="integrated_section section_space">
+      <!-- <section class="integrated_section section_space">
         <div class="container">
           <div class="heading_block style_2 text-center">
             <div class="badge text-uppercase text-dark bg-dark-subtle">Integrated</div>
@@ -1227,7 +1241,7 @@
             </ul>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- Integrated Section - End
         ================================================== -->
 
@@ -1265,7 +1279,7 @@
             </div>
             <div class="col-lg-6">
               <div class="app_image">
-                <img src="assets/images/mobile_app_image.webp" alt="App Image">
+                <img src="assets/images/mobile_app_image.png" alt="App Image">
               </div>
             </div>
           </div>
@@ -1294,7 +1308,7 @@
                 <div class="iconbox_content">
                   <h3 class="iconbox_title">Write to us</h3>
                   <p class="mb-0">
-                    <a href="mailto:finto@synos.com">admin@perryleo.com</a>
+                    <a href="mailto:finto@synos.com">support@perryleo.com</a>
                   </p>
                 </div>
               </div>
