--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -35,6 +35,20 @@
   <!-- Custom - CSS Include -->
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/68b87ab4109d7be2aa213dca/1j489ul40';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
+
 </head>
 
 
@@ -228,9 +242,7 @@
                           <i class="fa-solid fa-circle"></i>
                         </span>
                         <span class="iconlist_text">
-                          <b>Business Information:</b> Company name, tax ID, business address, and contact details
-                          (email,
-                          phone number).
+                          <b>Personal Information:</b> DOB, BVN (We don't store these)
                         </span>
                       </li>
                       <li>
@@ -238,16 +250,7 @@
                           <i class="fa-solid fa-circle"></i>
                         </span>
                         <span class="iconlist_text">
-                          <b>Financial Data:</b> Bank account details, payment transaction history, and billing
-                          information.
-                        </span>
-                      </li>
-                      <li>
-                        <span class="iconlist_icon text-dark">
-                          <i class="fa-solid fa-circle"></i>
-                        </span>
-                        <span class="iconlist_text">
-                          <b>Transactional Data:</b> Details of international payments, currency conversions, and
+                          <b>Transactional Data:</b> Details of payments, and
                           recipient
                           information.
                         </span>
@@ -257,9 +260,7 @@
                           <i class="fa-solid fa-circle"></i>
                         </span>
                         <span class="iconlist_text">
-                          <b>Technical Data:</b> IP address, device information, browser type, and usage patterns (e.g.,
-                          via
-                          cookies and analytics tools).
+                          <b>Technical Data:</b> IP address, device information for Push notifications
                         </span>
                       </li>
                       <li>
@@ -290,7 +291,7 @@
                             <i class="fa-solid fa-circle"></i>
                           </span>
                           <span class="iconlist_text">
-                            Process and facilitate global payments and currency conversions.
+                            Process and facilitate inter platform and intra platform payments.
                           </span>
                         </li>
                         <li>
@@ -298,7 +299,7 @@
                             <i class="fa-solid fa-circle"></i>
                           </span>
                           <span class="iconlist_text">
-                            Verify business identity and comply with legal/regulatory obligations (e.g., anti-money
+                            Verify user identity and comply with legal/regulatory obligations (e.g., anti-money
                             laundering checks).
                           </span>
                         </li>
@@ -425,9 +426,9 @@
                   <div>
                     <h3 class="item_details_info_heading">International Data Transfers</h3>
                     <p>
-                      As a global payment solutions provider, your data may be transferred to and processed in
-                      countries outside your jurisdiction. We ensure such transfers comply with applicable data
-                      protection laws (e.g., GDPR, CCPA) through safeguards like standard contractual clauses.
+                      As a nation wide payment solutions provider, your data may be transferred to and processed in
+                      systems outside our platform. We ensure such transfers comply with applicable data
+                      protection laws.
                     </p>
 
                   </div>
@@ -435,7 +436,7 @@
                   <div>
                     <h3 class="item_details_info_heading">Your Rights</h3>
                     <p>
-                      Depending on your location, you may have the right to:
+                      Depending on your preferences, you may have the right to:
                     </p>
 
                     <div>
@@ -476,7 +477,7 @@
                       </ul>
                       <div>
                         <p>
-                          To exercise these rights, contact us at [Insert Contact Email].
+                          To exercise these rights, contact us at info@perryleo.com.
                         </p>
                       </div>
                     </div>
@@ -561,7 +562,7 @@
                 <div class="iconbox_content">
                   <h3 class="iconbox_title">Write to us</h3>
                   <p class="mb-0">
-                    <a href="mailto:finto@synos.com">admin@perryleo.com</a>
+                    <a href="mailto:finto@synos.com">support@perryleo.com</a>
                   </p>
                 </div>
               </div>
