--- a/about.html
+++ b/about.html
@@ -35,7 +35,32 @@
     <!-- Custom - CSS Include -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+    <style>
+      .item_details_image:hover img {
+        transform: scale(1.05);
+      }
+      .item_details_image:hover .image-overlay {
+        opacity: 1;
+      }
+    </style>
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/68b87ab4109d7be2aa213dca/1j489ul40';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
   </head>
+
+
+  
 
 
   <body>
@@ -179,7 +204,7 @@
           <div class="container">
             <div class="clients_logo_carousel swiper">
               <!-- <div class="badge text-uppercase text-primary bg-primary-subtle">Trusted Companies</div> -->
-              <div class="swiper-wrapper">
+              <!-- <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="image_block border">
                     <img src="assets/images/clients/client_logo_2.webp" alt="Client Logo">
@@ -250,7 +275,7 @@
                     <img src="assets/images/clients/client_logo_8.webp" alt="Client Logo">
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="decoration_item icon_star_1">
@@ -332,10 +357,11 @@
 
         <section class="service_details_section section_space section_decoration overflow-hidden">
           <div class="container">
-            <div class="item_details_image position-relative">
-              <img src="assets/images/about-img.jpg" alt="Project Image">
-              
-              </a>
+            <div class="item_details_image position-relative overflow-hidden rounded-3 shadow-lg wow fadeInUp" data-wow-delay=".2s" style="margin-top: -150px;">
+              <img src="assets/images/about-img.jpg" alt="About PerryLeo" class="img-fluid w-100 transition-transform" style="transition: transform 0.3s ease;">
+              <div class="image-overlay position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center opacity-0" style="background: rgba(0,0,0,0.7); transition: opacity 0.3s ease;">
+                <i class="fa-solid fa-expand text-white fs-2"></i>
+              </div>
             </div>
             <div class="item_details_content">
               
@@ -572,7 +598,7 @@
                   <div class="iconbox_content">
                     <h3 class="iconbox_title">Write to us</h3>
                     <p class="mb-0">
-                      <a href="mailto:finto@synos.com">admin@perryleo.com</a>
+                      <a href="mailto:finto@synos.com">support@perryleo.com</a>
                     </p>
                   </div>
                 </div>
