--- a/download.html
+++ b/download.html
@@ -37,6 +37,20 @@
     <!-- currencies converter form actions -->
     <script src="assets/js/currency-converter.js"></script>
 
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/68b87ab4109d7be2aa213dca/1j489ul40';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+
 </head>
 
 
@@ -208,7 +222,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="app_image">
-                                <img src="assets/images/mobile_app_image.webp" alt="App Image">
+                                <img src="assets/images/mobile_app_image.png" alt="App Image">
                             </div>
                         </div>
                     </div>
@@ -237,7 +251,7 @@
                                 <div class="iconbox_content">
                                     <h3 class="iconbox_title">Write to us</h3>
                                     <p class="mb-0">
-                                        <a href="mailto:finto@synos.com">admin@perryleo.com</a>
+                                        <a href="mailto:finto@synos.com">support@perryleo.com</a>
                                     </p>
                                 </div>
                             </div>
