--- a/service_details.html
+++ b/service_details.html
@@ -35,6 +35,20 @@
     <!-- Custom - CSS Include -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/68b87ab4109d7be2aa213dca/1j489ul40';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+
   </head>
 
 
@@ -357,7 +371,7 @@
                   <div class="iconbox_content">
                     <h3 class="iconbox_title">Write to us</h3>
                     <p class="mb-0">
-                      <a href="mailto:finto@synos.com">admin@perryleo.com</a>
+                      <a href="mailto:finto@synos.com">support@perryleo.com</a>
                     </p>
                   </div>
                 </div>
