--- a/delete_account.html
+++ b/delete_account.html
@@ -197,7 +197,7 @@
                         <div class="col-lg-5 order-lg-last">
                             <div class="heading_block style_2">
                                 <div class="badge text-uppercase text-dark bg-dark-subtle"><i
-                                        class="fa-solid fa-fire"></i> Mobile App 2.0 <b>NEW</b></div>
+                                        class="fa-solid fa-fire"></i> Mobile App 1.0 <b>NEW</b></div>
                                 <h2 class="heading_text">
                                     Request Account & Data Deletion
                                 </h2>
@@ -213,8 +213,8 @@
 
                         </div>
                         <div class="col-lg-6">
-                            <div class="app_image">
-                                <img src="assets/images/mobile_app_image.png" alt="App Image">
+                            <div class="app_image" style="display:flex;justify-content: center;">
+                                <img src="assets/images/delete_account.png" alt="App Image" style="width: 200px;border-radius: 20px;object-fit: contain;">
                             </div>
                         </div>
                     </div>
