--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -184,9 +184,9 @@
       <section class="blog_details_section section_space bg-light">
         <div class="container">
           <div class="item_details_image">
-            <img src="assets/images/projects/privacy-policy.jpeg" alt="Blog Details Image" style="
+            <img src="assets/images/privacy-policy.jpeg" alt="Blog Details Image" style="
               width: 100%;
-              object-fit: contain;">
+              object-fit: contain;" />
           </div>
           <div class="item_details_content">
             <ul class="post_meta unordered_list mb-4 text-uppercase">
