Added business number

--- a/service_fees.html
+++ b/service_fees.html
@@ -484,9 +484,10 @@
                     <img src="assets/images/icons/icon_calling_5.svg" alt="Icon Calling">
                   </div>
                   <div class="iconbox_content">
-                    <h3 class="iconbox_title"> Call Us (Nigeria, Uk)</h3>
+                    <h3 class="iconbox_title"> Call Us (Nigeria, Germany)</h3>
                     <p class="mb-0">
                       <a href="tel:+(1)12304528597">+234&nbsp;704&nbsp;888&nbsp;7066 <br> +49&nbsp;179&nbsp;1107305<br></a>
+                      <a href="tel:2342013309408">+234 (201) 330 9408</a>
                     </p>
                   </div>
                 </div>
