Added form sending - 1

--- a/contact.html
+++ b/contact.html
@@ -306,7 +306,8 @@
                   <form action="https://api.web3forms.com/submit" method="POST">
   <input type="hidden" name="access_key" value="4e64f052-d356-4330-8e08-643525b12fa2">
   <input type="hidden" name="subject" value="New Contact from PerryLeo Website">
-  <input type="hidden" name="redirect" value="thank-you.html">
+  <input type="hidden" name="redirect" value="https://www.perryleo.com/thank-you.html">
+
   
   <div class="row">
     <div class="col-md-6">
